# udemy-dl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  review.md  test_eof.py  test_re_split.py  test_split.py  udemy.py
.github/workflows/: ci.yml
docs/: codebase-review.md
plans/: improvement-plan.md
src/: api.py  app.py  config.py  dl.py  main.py  state.py  tui.py  utils.py
src/udemy_dl/: __init__.py  api.py  app.py  config.py  dl.py  exceptions.py  main.py  models.py  pipeline.py  state.py  tui.py  utils.py
tests/: test_api.py  test_app.py  test_config.py  test_dl.py  test_main.py  test_models.py  test_pipeline.py  test_state.py  test_tui.py  test_utils.py
