[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udemy-dl"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "windows-curses>=2.3.2; platform_system == 'Windows' and python_version < '3.14'"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov>=4.0.0",
    "ruff==0.15.5",
    "mypy==1.19.1",
    "types-requests>=2.31.0",
    "black==26.3.0",
    "pre-commit==4.5.1"
]

[project.scripts]
udemy-dl = "udemy_dl.main:run"

[tool.setuptools.dynamic]
version = {attr = "udemy_dl.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["udemy_dl*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["udemy_dl"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RET",
    "PTH",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["udemy_dl"]

[tool.ruff.lint.per-file-ignores]
"src/udemy_dl/tui.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
